--- a/parque_banque_server/src/main/resources/templates/linkpaymentaccountconfirmation.html
+++ b/parque_banque_server/src/main/resources/templates/linkpaymentaccountconfirmation.html
@@ -17,6 +17,7 @@
 <br/>
 <br/>
 <br/>
-<h1>Gefeliciteerd, u bent mederekeninghouder geworden!</h1>
+<h1>U bent als mederekeninghouder toegevoegd aan de rekening.</h1>
+<button onclick="document.location = '/rekening-overzicht'">Rekeningoverzicht</button>
 </body>
 </html>
