--- a/parque_banque_server/src/main/resources/templates/selectedaccount.html
+++ b/parque_banque_server/src/main/resources/templates/selectedaccount.html
@@ -5,6 +5,48 @@
         <title>Geselecteerde rekening</title>
         <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
+        <style>
+            table {
+                alignment: center;
+                width: 100%;
+                border: 1px solid black
+            }
+            td {
+                font-family: "Arial",sans-serif;
+                width: 100px;
+                font-size: small;
+            }
+            th {
+                border: 1px solid #dddddd;
+                text-align: left;
+                font-family: "Arial",sans-serif;
+                font-size: small;
+                padding: 8px;
+                width: 300px;
+            }
+            thead {
+                font-size: 8px
+            }
+            h1 {
+                font-family: "Arial",sans-serif;
+                font-size: x-large;
+            }
+            h2 {
+                font-family: "Arial", sans-serif;
+                font-size: small;
+            }
+            tr:nth-child(even) {
+                background-color: #dddddd;
+            }
+            button {
+                alignment: left;
+            }
+            tr[data-href]:hover {
+                cursor: pointer;
+            }
+        </style>
+
     </head>
     <body>
         <!-- navigatie -->
@@ -31,19 +73,24 @@
 
         <a href="/rekeninghouder-toevoegen"><button>Rekeninghouder toevoegen</button></a>
         <a href="/overboeken"><button>Geld overmaken</button></a>
+
         <h2>Transacties</h2>
-        <ul>
-            <li><span th:field="Transactie1" />Transactie 1</li>
-            <li><span th:field="Transactie2" />Transactie 2</li>
-            <li><span th:field="Transactie3" />Transactie 3</li>
-            <li><span th:field="Transactie4" />Transactie 4</li>
-            <li><span th:field="Transactie5" />Transactie 5</li>
-            <li><span th:field="Transactie6" />Transactie 6</li>
-            <li><span th:field="Transactie1" />Transactie 7</li>
-            <li><span th:field="Transactie2" />Transactie 8</li>
-            <li><span th:field="Transactie3" />Transactie 9</li>
-            <li><span th:field="Transactie4" />Transactie 10</li>
-        </ul>
+        <table>
+            <thead>
+                <tr>
+                    <th>Van/naar</th>
+                    <th>Bedrag</th>
+                    <th>Datum</th>
+                    <th>Beschrijving</th>
+                </tr>
+            </thead>
+            <tr th:each="transactie : ${transacties}">
+                <td th:text="${transactie.fromOrToIban}" ></td>
+                <td th:text="${transactie.amount}"></td>
+                <td th:text="${transactie.date}"> </td>
+                <td th:text="${transactie.description}"></td>
+            </tr>
+        </table>
 
     </body>
 </html>
