--- a/parque_banque_server/src/main/resources/templates/newtransaction.html
+++ b/parque_banque_server/src/main/resources/templates/newtransaction.html
@@ -23,7 +23,7 @@
     <main>
         <div class="container">
             <div class=formheader>
-                <h2>Overboeken van rekening <span class="debitIban" th:field="${iban}">NL##PARQ0#########</span></h2>
+                <h2>Overboeken van rekening <span class="debitIban" th:field="${iban}"></span></h2>
             </div>
              <form class="form" id="form" action="#" th:action="@{/overboeken}" th:object="${transactionFormBean}" method="post" >  
                  
