javascript toegevoegd, werkt nog niet

--- a/parque_banque_server/src/main/resources/templates/addaccountholder/addaccountholder.html
+++ b/parque_banque_server/src/main/resources/templates/addaccountholder/addaccountholder.html
@@ -11,6 +11,7 @@
     <form action="#" th:action="@{/rekeninghouder-toevoegen}" th:object="${addAccountHolderFormBean}" method="post">
         <div>
             <label for="username">Gebruikersnaam</label>
+            <span id="unknownUsername" class="error" style="float: right; display: none">Deze gebruikersnaam bestaat niet.</span>
             <input id="username" type="text" required pattern="[A-Za-z0-9]{5,255}" th:field="*{username}"
                    title="Vul de gebruikersnaam in"
                    oninvalid="setCustomValidity('Een gebruikersnaam bestaat uit minimaal 5 tekens (alleen letters en cijfers)')"
@@ -18,7 +19,8 @@
         </div>
         <div>
             <label for="securityCode">Beveiligingscode</label>
-            <span th:if="${insecureCode}" class="error" style="float: right">Dit is geen veilige code</span>
+<!--            <span th:if="${insecureCode}" class="error" style="float: right">Dit is geen veilige code</span>-->
+            <span id="insecureCode" class="error" style="float: right; display: none">Dit is geen veilige code</span>
             <input id="securityCode" type="text" required pattern="[0-9]{5}" th:field="*{securityCode}"
                    title="Verzin een een beveiligingscode van 5 cijfers"
                    oninvalid="setCustomValidity('Beveiligingscode moet bestaan uit 5 cijfers')"
