javascript boolean werkt niet

--- a/parque_banque_server/src/main/resources/templates/addaccountholder/addaccountholder.html
+++ b/parque_banque_server/src/main/resources/templates/addaccountholder/addaccountholder.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Rekeninghouder toevoegen | Parque Banque</title>
+    <script type="text/javascript" src="/javascript/addaccountholder.js" defer></script>
 </head>
 <body>
     <h1>Rekeninghouder toevoegen</h1>
