--- a/parque_banque_server/src/main/resources/templates/linkpaymentaccount.html
+++ b/parque_banque_server/src/main/resources/templates/linkpaymentaccount.html
@@ -24,32 +24,54 @@
     label {
 
     }
+    .form1 {
+        margin-left: 30px;
+    }
+    .form2 {
+        margin-left: 30px;
+    }
+    button {
+        margin-left: 30px;
+        margin-top: 20px;
+    }
 
 
 </style>
 <a href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink"
                  width="80px" height="45px"></a>
 <body>
-    <nav class="navigation">
-        <ul>
-            <li class="logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a><li/>
-            <li class="nav-link"><a href="/contact">Contact</a></li>
-        </ul>
-    </nav>
+<nav class="navigation">
+    <ul>
+        <li class="logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}"
+                                                         alt="parque banque"></a>
+        <li/>
+        <li class="nav-link"><a href="/contact">Contact</a></li>
+    </ul>
+</nav>
 <h1>Vul hier het rekeningnummer en de code in die u heeft gekregen van de rekeninghouder.</h1>
-    <form class="accounttoevoegen-form" th:action="@{/rekening-koppelen}" th:object="${linkAccountFormBean}" method="post">
-        <div class="form1">
-          <span th:if="${invalidCredentials}" class="error">De combinatie tussen rekeningnummer en beveiligingscode is onjuist. Probeer het opnieuw.<br/></span>
-            <br/>
-            <label for="iban">Rekeningnummer</label><br/>
-            <input type="text" id="iban" th:field="*{iban}"  name="iban" autofocus="autofocus"/><br/></div>
+<form class="accounttoevoegen-form" th:action="@{/rekening-koppelen}" th:object="${linkAccountFormBean}" method="post">
+    <div class="form1">
+        <span th:if="${invalidCredentials}" class="error">De combinatie tussen rekeningnummer en beveiligingscode is onjuist. Probeer het opnieuw.<br/></span>
+        <br/>
+        <label for="iban">Rekeningnummer</label><br/>
+        <input type="text" id="iban" th:field="*{iban}" name="iban" autofocus="autofocus"
+        oninvalid="setCustomValidity('Het ibannummer is niet correct')"
+        oninput="setCustomValidity('')"/>
+        <br/>
 
-        <div class="form1">
-            <label for="securityCode">Beveiligingcode</label><br/>
-            <input type="text" id="securityCode" th:field="*{securityCode}" name="securityCode" autofocus="autofocus"/><br/></div>
-            <br/>
+    </div>
+</form>
 
-    <button id=bevestig type="submit" value="OK">OK</button>
+<form class="accounttoevoegen-form" th:action="@{/rekening-koppelen}" th:object="${linkAccountFormBean}" method="post">
+    <div class="form2">
+        <label for="securityCode">Beveiligingcode</label><br/>
+        <input type="text" id="securityCode" th:field="*{securityCode}" name="securityCode" required pattern="[0-9]{5}" autofocus="autofocus"
+         oninvalid="setCustomValidity('Beveiligingscode moet bestaan uit 5 cijfers')"
+         oninput="setCustomValidity('')"/>
+        <br/>
+        </div>
+    <button type="submit" name="action=">OK</button>
+
 </form>
 </body>
 </html>
