--- a/parque_banque_server/src/main/resources/templates/linkpaymentaccount.html
+++ b/parque_banque_server/src/main/resources/templates/linkpaymentaccount.html
@@ -35,6 +35,19 @@
         margin-left: 30px;
         margin-top: 20px;
     }
+   #sec_error{
+       color: #FF0000;
+       margin-top: 5px;
+       font-size: small;
+       margin-left: 30px;
+    }
+
+    #IBAN_error{
+        color: #FF0000;
+        margin-top: 5px;
+        font-size: small;
+        margin-left: 30px;
+    }
 
 
 </style>
@@ -54,10 +67,9 @@
     <div class="form1">
         <span th:if="${invalidCredentials}" class="error">De combinatie tussen rekeningnummer en beveiligingscode is onjuist. Probeer het opnieuw.</span>
         <br/>
+        <br/>
         <label for="iban">Rekeningnummer</label><br/>
         <input type="text" id="iban" th:field="*{iban}" name="iban" autofocus="autofocus">
-<!--        oninvalid="setCustomValidity('Het ibannummer is niet correct')"-->
-<!--        oninput="setCustomValidity('')"/>-->
         <br/>
 
     </div>
@@ -65,15 +77,16 @@
 
     <div class="form2">
         <label for="securityCode">Beveiligingcode</label><br/>
-        <input type="text" id="securityCode" th:field="*{securityCode}" name="securityCode" required pattern="[0-9]{5}" autofocus="autofocus"
-         oninvalid="setCustomValidity('Beveiligingscode moet bestaan uit 5 cijfers')"
-         oninput="setCustomValidity('')"/>
+        <input type="text" id="securityCode" th:field="*{securityCode}" name="securityCode" required pattern="[0-9]{5}" autofocus="autofocus">
+<!--         oninvalid="setCustomValidity('Beveiligingscode moet bestaan uit 5 cijfers')"-->
+<!--         oninput="setCustomValidity('')"/>-->
         <br/>
     </div>
     <p id='sec_error'></p>
     <button type="button" onclick="validate()">OK</button>
-<script>
 
+
+<script>
     function validate() {
         document.getElementById('IBAN_error').innerHTML = ''
         document.getElementById('sec_error').innerHTML = ''
@@ -87,20 +100,16 @@
         if (ibanResult === true && secResult === true){//ajax code en iban matchen
             document.form.submit();
         } else if (ibanResult === false && secResult === true) {
-            document.getElementById('IBAN_error').innerHTML = 'IBAN fout'
+            document.getElementById('IBAN_error').innerHTML = 'het ibannummer bestaat uit 2 letter, 2 cijfers, 4 letters en 10 cijfers'
         } else if (ibanResult === true && secResult === false) {
-            document.getElementById('sec_error').innerHTML = 'Beveiligingscode fout'
+            document.getElementById('sec_error').innerHTML = 'de beveiligingscode bestaat uit 5 cijfers'
         } else {
-            document.getElementById('IBAN_error').innerHTML = 'IBAN fout'
-            document.getElementById('sec_error').innerHTML = 'Beveiligingscode fout'
+            document.getElementById('IBAN_error').innerHTML = 'het ibannummer bestaat uit 2 letter, 2 cijfers, 4 letters en 10 cijfers'
+            document.getElementById('sec_error').innerHTML =  'de beveiligingscode bestaat uit 5 cijfers'
         }
-
     }
 </script>
 </form>
 </body>
-
-
-
 
 </html>
