--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -73,10 +73,10 @@
 
         <br/>
 
-        <button onclick="document.location = '/wijzigen-rekening'">Wijzigen gegevens</button>
-        <!--<button onclick="document.location = '/rekening-openen'">Rekening openen</button>--->
+        <button onclick="document.location = '/particuliere-rekening-openen'">Particuliere Rekening openen</button>
+        <button onclick="document.location = '/zakelijke-rekening'">Zakelijke Rekening openen</button>
         <button onclick="document.location = '/rekening-koppelen'">Rekening koppelen</button>
-        <!--<button onclick="document.location = '/uitloggen'">Uitloggen</button>--->
+
 
         <br/>
 
