--- a/parque_banque_server/src/main/resources/templates/index.html
+++ b/parque_banque_server/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
         <ul class= "footer-list">
             <li><a class= list-link href="/inloggen">Inloggen</a></li>
             <li><a class= list-link href="/klant-worden">Klant worden</a></li>
-            <li><a class= list-link href="/rekening-openen">Rekening openen</a></li>
+            <li><a class= list-link href="/rekening-overzicht">Rekening openen</a></li>
             <li><a class= list-link href="/personeel">inloggen personeel</a></li>
         </ul>
     <div id="footer-address">
