--- a/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
+++ b/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
@@ -12,7 +12,8 @@
 
 
     <input type="submit" name="Saldo" value="Saldo" >
-
+</form>
+<form action="/overzicht-bedrijven" method="post" th:object="${averageBalanceSectors}" >
     <input type="submit" name="Sectoren" value="Sectoren" >
 
 </form>
