--- a/parque_banque_server/src/main/resources/templates/tenrichestbusinessaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/tenrichestbusinessaccounts.html
@@ -2,17 +2,17 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>10 hoogste zakelijke klanten</title>
+    <title>Zakelijke klanten met het hoogste saldo</title>
     <link th:href="@{/css/tenrichestbusinessaccounts.css}" href="../static/css/tenrichestbusinessaccounts.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
-<h1>Zakelijke klanten</h1>
+<h2>Zakelijke Klanten</h2>
 <table id="ranking-table" table class="content-table">
     <thead>
     <tr>
-        <th></th>
+        <th>Nummer</th>
         <th>Klant</th>
         <th>Saldo</th>
         <th>Aantal Rekeningen</th>
