--- a/parque_banque_server/src/main/resources/static/css/transaction.css
+++ b/parque_banque_server/src/main/resources/static/css/transaction.css
@@ -85,15 +85,6 @@ input.t-cents{
     width: 15%;
 }
 
-/*Als er nog een vinkje of een aftellen komt in een balk dan dit:
-
-maak een li
-
-.form-control li {
-position: absolute;
-top: 40px;
-right: 10px;
-} */
 
 .form-control small{
     visibility: hidden;
@@ -105,6 +96,10 @@ right: 10px;
 .form-control.error small {
     color:#a80a0a;
     visibility: visible;
+}
+
+.th small {
+    color:#a80a0a;
 }
 
 .form button {
