--- a/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
+++ b/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
@@ -13,7 +13,7 @@
 
     <input type="submit" name="Saldo" value="Saldo" >
 </form>
-<form action="/overzicht-bedrijven" method="post" th:object="${averageBalanceSectors}" >
+<form action="/overzicht-bedrijven" method="post" th:object="${averageBalanceSector}" >
     <input type="submit" name="Sectoren" value="Sectoren" >
 
 </form>
