gemiddelde balance sectoren staat erop, niet met custom query

--- a/parque_banque_server/src/main/resources/templates/averagebalancesector.html
+++ b/parque_banque_server/src/main/resources/templates/averagebalancesector.html
@@ -12,7 +12,7 @@
     <thead>
     <tr>
         <th>Sector Naam</th>
-        <th>Gemiddelde Saldo</th>
+        <th>Gemiddelde Saldo per Sector</th>
     </tr>
     </thead>
     <tr th:each="key, index : ${averageBalanceSector.keySet()}">
