knop terug naar rekeningoverzicht op linkaccountpagina

--- a/parque_banque_server/src/main/resources/templates/linkpaymentaccount.html
+++ b/parque_banque_server/src/main/resources/templates/linkpaymentaccount.html
@@ -82,7 +82,7 @@
     </div>
     <p id='sec_error'></p>
     <button type="button" onclick="validate()">OK</button>
-
+    <button type="button" onclick="document.location ='/rekening-overzicht'">Rekeningoverzicht</button>
 
 <script>
     function validate() {
